    with Matlab.  Change all uses of "ascending" and "descending" in
    existing code to the new options.

 ** Figure graphic objects have a new property "Number" which is
    read-only and will return the handle (number) of the figure.
    However, if the property "IntegerHandle" has been set to "off" then
    the property will return an empty matrix ([]).

 ** We now require the FFTW library to perform FFT calculations.  The
    FFTPACK sources have been removed from Octave.

 ** Deprecated functions.

    The following functions have been deprecated in Octave 5.0 and will
    be removed from Octave 7 (or whatever version is the second major
    release after 5.0):

      Function             | Replacement
      ---------------------|------------------
                           |

 ** The following functions were deprecated in Octave 4.2 and have been
    removed from Octave 5.0.

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      mahalanobis          | mahal in Octave-Forge statistics pkg
      md5sum               | hash
      octave_config_info   | __octave_config_info__
      onenormest           | normest1
      sleep                | pause
      usleep               | pause
      wavread              | audioread
      wavwrite             | audiowrite

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been
    deprecated in Octave 5.0 and will be removed from Octave 7 (or whatever
    version is the second major release after 5.0):

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
                           |                         |

 ** The following properties or allowed corresponding values were
    deprecated in Octave 4.2 and have been removed from Octave 5.0:

      Object               | Property                | Value